<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSignInEmail"
            android:textSize="@dimen/text_size"
            android:textColor="@color/appLightGray"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/appLightGray"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/tvSignInNotRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/text_blue_selector"
            android:textSize="@dimen/text_size"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/tvSignInSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_blue_selector"
            android:textSize="@dimen/title_text_size"
            android:layout_gravity="center"
            android:layout_below="@id/tvSignInNotRegistered"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignInSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/text_blue_selector"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="right|top"
        android:text="@string/skip"/>

</FrameLayout>